--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -31,3 +31,7 @@ xpack.monitoring.enabled: false
 {% if not "alerting" in es_xpack_features %}
 xpack.watcher.enabled: false
 {% endif %}
+
+
+#################################### Bootstrap ####################################
+bootstrap.system_call_filter: false
