--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -42,3 +42,13 @@ xpack.graph.enabled: false
 
 #################################### Bootstrap ####################################
 bootstrap.system_call_filter: false
+
+#################################### SSL ##########################################
+xpack.security.transport.ssl.enabled: {{ssl_enabled | false}}
+xpack.security.http.ssl.enabled: {{ssl_enabled | false}}
+{% if keystore_path is defined %}
+xpack.ssl.keystore.path: {{keystore_path}}
+xpack.ssl.keystore.password: changeit
+xpack.security.transport.ssl.keystore.path: {{keystore_path}}
+xpack.security.transport.ssl.keystore.password: changeit
+{% endif %}
